[gd_scene load_steps=3 format=2]

[ext_resource path="res://DialogEditorElements/DialogOption.gd" type="Script" id=1]
[ext_resource path="res://Elements/StatementBt.tscn" type="PackedScene" id=2]

[node name="Option" type="HBoxContainer" groups=["DIAOPT"]]
margin_right = 872.0
margin_bottom = 33.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_top = 6.0
margin_right = 63.0
margin_bottom = 26.0
text = "Название:"

[node name="OptionName" type="LineEdit" parent="."]
margin_left = 67.0
margin_right = 726.0
margin_bottom = 33.0
mouse_filter = 1
size_flags_horizontal = 3

[node name="StatementBt" parent="." instance=ExtResource( 2 )]
margin_left = 730.0
margin_right = 849.0
margin_bottom = 33.0
mouse_filter = 1

[node name="DeleteBt" type="Button" parent="."]
margin_left = 853.0
margin_right = 872.0
margin_bottom = 33.0
mouse_filter = 1
text = "X"

[connection signal="toggled" from="StatementBt" to="." method="_on_StatementBt_toggled"]
[connection signal="pressed" from="DeleteBt" to="." method="_on_DeleteBt_pressed"]
